<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:background="#e9e9e9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/topview"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/header"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:id="@+id/back_btn"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/profile_back"
            android:onClick="backtoCart"/>

        <com.balram.library.FotTextView
            android:background="#0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/select_delivery_time_text"
            android:singleLine="true"
            android:layout_marginTop="@dimen/menu_mar"
            android:textCursorDrawable="@null"
            android:textColor="#fff"
            app:customfont="Exo2-Regular.otf"
            android:textSize="20dp"/>


    </RelativeLayout>


    <LinearLayout
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">



        <!-- Date Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/profile_email" />

            <com.balram.library.FotTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="start|center_vertical"
                android:singleLine="true"
                android:text="@string/type_of_order"
                android:textColor="@color/profile_hint"
                android:textSize="14sp"
                app:customfont="Exo2-Regular.otf" />


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">


            <android.support.v7.widget.GridLayout

                xmlns:android="http://schemas.android.com/apk/res/android"

                xmlns:grid="http://schemas.android.com/apk/res-auto"
                android:id="@+id/gvTypeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                grid:columnCount="3"
                grid:columnOrderPreserved="true" />


            <com.balram.library.FotTextView
                android:id="@+id/tvNoTypeAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/no_options_available"
                android:textColor="@color/profile_hint"
                android:textSize="14sp"
                app:customfont="Exo2-Regular.otf" />

        </FrameLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/profile_email"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <com.balram.library.FotTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:singleLine="true"
                android:textColor="@color/profile_hint"
                app:customfont="Exo2-Regular.otf"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:text="@string/select_date"/>


        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">


            <android.support.v7.widget.GridLayout

                android:id="@+id/gvDateLayout"

                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:grid="http://schemas.android.com/apk/res-auto"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                grid:columnOrderPreserved="true"
                grid:columnCount="3"/>


            <com.balram.library.FotTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/tvNoDateAvailable"
                android:text="@string/no_date_selected"
                android:layout_gravity="center"
                android:textColor="@color/profile_hint"
                app:customfont="Exo2-Regular.otf"
                android:padding="10dp"
                android:textSize="14sp"/>

        </FrameLayout>
        <!-- Date Layout-->


        <!-- Time Layout -->
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:src="@drawable/profile_email"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <com.balram.library.FotTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"
                android:singleLine="true"
                android:textColor="@color/profile_hint"
                app:customfont="Exo2-Regular.otf"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:text="@string/select_time"/>


        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">


            <android.support.v7.widget.GridLayout

                android:id="@+id/gvTimeLayout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:grid="http://schemas.android.com/apk/res-auto"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                grid:columnOrderPreserved="true"
                grid:columnCount="3"/>



            <com.balram.library.FotTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvNoTimeAvailable"
                android:text="@string/no_time_selected"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/profile_hint"
                app:customfont="Exo2-Regular.otf"
                android:padding="10dp"
                android:textSize="14sp"/>

        </FrameLayout>
        <!-- Time Layout-->


        <com.balram.library.FotTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/profile_hint"
            app:customfont="Exo2-Regular.otf"
            android:textSize="13sp"
            android:text="Lorem ipsum dollar smith Lorem ipsum dollar smith"/>




        <com.balram.library.FotButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_widget"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/save_setting"
            android:textAllCaps="true"
            android:onClick="saveSetting"
            android:layout_marginTop="@dimen/profile_lr_mar"
            android:layout_marginBottom="@dimen/profile_etx_gap"
            android:textColor="#fff"
            android:background="@drawable/profile_button"
            app:customfont="Exo2-Bold.otf"
            android:textSize="@dimen/profile_txt"/>


    </LinearLayout>



</LinearLayout>
